Add sign-in page template, route, and navigation link

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,5 +8,6 @@
 <body>
     <h1>Welcome to the app!</h1>
     <a href="/auth/sign-up">Sign up</a>
+    <a href="/auth/sign-in">sign in</a>
 </body>
 </html>
