--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,9 +6,11 @@
     <title>Hong Page</title>
 </head>
 <body>
-    <h1>Welcome to the app!</h1>
     <% if (user) { %>
         <h1>Welcome to the app, <%= user.username %>!</h1>
+        <p>
+            <a href ="/auth/sign-out">Sign out</a>
+        </p>
         <% } else { %>
         <h1>Welcome to the app, guest.</h1>
         <p>
